# inventy

./: CLAUDE.md  Podfile  README.md  app.json  babel.config.js  open_db_folder.sh  package-lock.json  package.json  pnpm-lock.yaml  polyfills.ts  setup_database_and_data.sh  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/docs/: IMPLEMENTATION_STATUS.md
apps/desktop/src-tauri/migrations/: 001_initial_schema.sql  002_modules_system.sql  002_shop_schema_postgres.sql
apps/desktop/src-tauri/migrations/old/: 001_initial_schema.sql
apps/desktop/src-tauri/src/: db.rs  lib.rs  repository_creation_tutorial.md
apps/desktop/src-tauri/src/commands/: brand_commands.rs  category_commands.rs  location_commands.rs  mod.rs  product_commands.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs  pool_manager.rs  repository_factory.rs
apps/desktop/src-tauri/src/dtos/: brand_dto.rs  category_dto.rs  customer.rs  location_dto.rs  mod.rs  product_dto.rs  shop_dto.rs  transaction.rs
apps/desktop/src-tauri/src/features/: mod.rs
apps/desktop/src-tauri/src/models/: brand.rs  inquiry.rs  mod.rs  product.rs  shop.rs  transaction.rs  user.rs
apps/desktop/src-tauri/src/repositories/: brand.rs  checkouts_repository.rs  customer.rs  customer_addresses_repository.rs  customer_group_memberships_repository.rs  customer_repository.rs  inquiries.rs  inquiries_repository.rs  inquiry_messages_repository.rs  inventory_levels_repository.rs  inventory_movements_repository.rs  mod.rs  product.rs  (+18 more)
(+482 files in other folders)
